# termpdf.py

./: .gitignore  LICENSE  README.markdown  README.md  kitty-pdf  pyproject.toml  requirements.txt  setup.py  termpdf.py
src/termpdf/: main.py
tests/: test_termpdf.py
